# GBPTrajectoryPlanner

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PROBE_GUIDE.md  README.md  project.code-workspace  sandbox.sh
.claude/: settings.json
.claude/agents/: desktop-reviewer.md  embedded-reviewer.md  no-std-reviewer.md
.claude/skills/add-factor/: SKILL.md
.claude/skills/flash-firmware/: SKILL.md
.claude/skills/new-embassy-task/: SKILL.md
.claude/skills/serialize-map/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg  post-checkout  post-commit  post-merge  pre-push
assets/models/: chassis.stl  magnetic_markers.stl  physical_track.stl
bins/esp32c5/: Cargo.toml  wokwi.toml
bins/esp32c5/.cargo/: config.toml
config/: config.toml
config/scenarios/: endcollision.toml  endcollision_v2.toml  fleet_4.toml  merge.toml
crates/gbp-agent/: Cargo.toml
crates/gbp-agent/src/: dynamic_constraints.rs  interrobot_set.rs  lib.rs  robot_agent.rs  trajectory.rs
crates/gbp-agent/tests/: interrobot_set_test.rs  robot_agent_test.rs  trajectory_test.rs
crates/gbp-comms/: Cargo.toml
crates/gbp-comms/src/: lib.rs
crates/gbp-comms/tests/: comms_test.rs
crates/gbp-core/: Cargo.toml
crates/gbp-core/src/: config.rs  dynamics_factor.rs  factor_graph.rs  factor_node.rs  interrobot_factor.rs  lib.rs  variable_node.rs  velocity_bound_factor.rs
crates/gbp-core/tests/: factor_test.rs  graph_test.rs
crates/gbp-map/: Cargo.toml
crates/gbp-map/src/: astar.rs  lib.rs  map.rs  nurbs.rs  parser.rs
crates/gbp-map/tests/: astar_test.rs  map_test.rs  nurbs_test.rs
docker/: Dockerfile.dev  docker-compose.dev.yml  welcome.sh
docs/: README.md  adding_a_factor.md  architecture.md  esp-now-implementation.md  gbp_merge_design.md  vis-api-status-report.md
docs/handoff/: 2026-03-21-m4-handoff.md  2026-03-22-session-handoff.md
docs/superpowers/plans/: 2026-03-19-m0-foundation-crates.md  2026-03-19-m1-one-robot-visible.md  2026-03-19-m2-full-route.md  2026-03-19-m3-two-robots-gbp.md  2026-03-19-m4-merge-collision-avoidance.md  2026-03-19-m5-fleet-full-visualiser.md  2026-03-19-m6-robustness-polish.md  2026-03-19-m7-gbp-firmware.md  2026-03-19-m8-bridge-hardware-robot.md  2026-03-19-m9-hybrid-fleet.md  2026-03-21-config-system.md  2026-03-21-m5-fleet-full-visualiser.md  2026-03-21-velocity-bound-factor-and-internal-external-split.md  2026-03-22-m6a-visualiser-overhaul.md  2026-03-22-m6b-live-tuning-debugging.md  2026-03-22-m6c-communication-model.md  2026-03-22-m6d-simulator-robustness.md
docs/superpowers/specs/: 2026-03-19-milestones-design.md  2026-03-21-config-system-design.md  2026-03-22-m6a-visualiser-overhaul-design.md  2026-03-22-m6b-live-tuning-debugging-design.md  2026-03-22-m6c-communication-model-design.md  2026-03-22-m6d-simulator-robustness-design.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/scripts/: flash-all.sh  flash-device.sh  monitor.sh
firmware/src/bins/esp32c5/: Cargo.toml
firmware/src/bins/esp32c5/src/: lib.rs
firmware/src/bins/esp32c5/src/comms/: mod.rs
firmware/src/bins/esp32c5/src/gbp/: mod.rs
firmware/src/bins/esp32c5/src/physics/: mod.rs
maps/: test_loop_map.yaml
scripts/: flash-all.sh  flash-device.sh  monitor.sh  setup-nvidia-docker.sh
scripts/vis/: cmd.py  screenshot.sh  test_m6a.py
src/bins/esp32c5/: diagram.json  wokwi.toml
src/bins/simulator/: Cargo.toml
src/bins/simulator/src/: agent_runner.rs  broadcast_task.rs  lib.rs  main.rs  physics.rs  sim_comms.rs  toml_config.rs  ws_server.rs
src/bins/simulator/tests/: m3_clearance.rs  m4_merge.rs
src/bins/visualiser/: Cargo.toml
src/bins/visualiser/src/: addon_config.rs  camera.rs  inspector.rs  main.rs  map_scene.rs  remote_cmd.rs  robot_render.rs  settings_panel.rs  state.rs  ui.rs  vis_api.rs  vis_event_systems.rs  vis_events.rs  ws_client.rs
src/bins/visualiser/src/addons/: debug_monitor.rs  mod.rs  proximity_screenshot.rs  startup_screenshot.rs  state_change_logger.rs
