[workspace]
resolver = "2"
members = [
    "crates/gbp-map",
    "crates/gbp-core",
    "crates/gbp-comms",
    "crates/gbp-agent",
    "src/bins/simulator",
]

[workspace.dependencies]
heapless   = { version = "0.8", default-features = false }
postcard   = { version = "1",   default-features = false }
libm       = { version = "0.2", default-features = false }
serde      = { version = "1",   features = ["derive"] }
serde_yaml = { version = "0.9" }
tokio      = { version = "1",   features = ["full"] }
axum       = { version = "0.7", features = ["ws"] }
serde_json = { version = "1" }
tower      = { version = "0.4" }
tracing    = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
