[workspace]
resolver = "2"
members = [
    "crates/gbp-map",
    "crates/gbp-core",
    "crates/gbp-comms",
    "crates/gbp-agent",
    "src/bins/simulator",
    "src/bins/visualiser",
]

[workspace.dependencies]
heapless   = { version = "0.8", default-features = false }
postcard   = { version = "1",   default-features = false }
libm       = { version = "0.2", default-features = false }
serde      = { version = "1",   default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9" }
tokio      = { version = "1",   features = ["full"] }
axum       = { version = "0.7", features = ["ws"] }
serde_json = { version = "1" }
tower      = { version = "0.4" }
tracing    = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy       = { version = "0.15", default-features = false, features = [
    "bevy_asset", "bevy_core_pipeline",
    "bevy_pbr", "bevy_render", "bevy_winit", "bevy_gizmos",
    "tonemapping_luts", "default_font", "x11"
] }
bevy_egui          = { version = "0.32" }
tokio-tungstenite  = { version = "0.24", features = ["native-tls"] }
futures-util       = { version = "0.3" }
