[package]
name    = "gbp-map"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde   = ["dep:serde", "heapless/serde"]
parse   = ["serde", "dep:serde_yaml"]

[dependencies]
heapless   = { workspace = true }
postcard   = { workspace = true, features = ["experimental-derive"] }
libm       = { workspace = true }
serde      = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

[dev-dependencies]
