[package]
edition = "2024"
name = "esp32c5_rust_template"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32c5_rust_template"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "esp32c5",
  "unstable",
] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "defmt",
  "esp32c5",
] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c5",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "defmt",
  "esp32c5",
] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "defmt",
] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = [
  "defmt",
  "esp-alloc",
  "esp32c5",
  "unstable",
  "wifi",
  "esp-now",
] }

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1" }
rtt-target = { version = "0.6.2", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
defmt = "1.0.1"

critical-section = "1.2.0"
static_cell = "2.1.1"

serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["heapless"] }
heapless = { version = "0.9.2", features = ["serde"] }
